# cng

./: .gitignore  Cargo.toml  log.txt
client/: eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
client/app/: page.tsx
client/app/dashboard/: page.tsx
client/app/dashboard/customers/: page.tsx
client/app/dashboard/devices/: page.tsx
client/app/dashboard/upload/: page.tsx
client/app/dashboard/weather/: page.tsx
client/app/lib/: utils.ts
client/app/ui/dashboard/: nav-links.tsx
client/app/ui/devices/: table.tsx
document/: architecture.drawio
server/: .gitignore  Cargo.toml
server/src/: app_cli.rs  cfg.rs  command.rs  main.rs  msg.rs  utils.rs
server/src/panels/: mod.rs  panel_brief.rs  panel_error.rs  panel_infos.rs  panel_log.rs  panels_main.rs
server/src/plugins/: mod.rs  plugin_devices.rs  plugin_file.rs  plugin_log.rs  plugin_mqtt.rs  plugin_nas.rs  plugin_ping.rs  plugin_shell.rs  plugin_stocks.rs  plugin_system.rs  plugin_todos.rs  plugin_weather.rs  plugin_wol.rs  plugin_worldtime.rs  plugins_main.rs
server/src/plugins/mongodb/: utils.rs
server/src/plugins/mqtt/: utils.rs
server/src/plugins/nas/: backup.rs  client.rs  files_data.rs  mod.rs  monitor.rs  server.rs
server/src/web/: mod.rs  web_main.rs
src/: app.rs  app_cli.rs  app_gui.rs  cfg.rs  command.rs  device.rs  log_to_file.rs  main.rs  mqtt.rs  msg.rs  utils.rs
src/panels/: mod.rs  panel_brief.rs  panel_devices.rs  panel_error.rs  panel_info.rs  panel_infos.rs  panel_log.rs  panels_main.rs
src/plugins/: mod.rs  plugin_devices.rs  plugin_file.rs  plugin_log.rs  plugin_mqtt.rs  plugin_ping.rs  plugin_shell.rs  plugin_system.rs  plugin_weather.rs  plugin_wol.rs  plugin_worldtime.rs  plugins_main.rs
src/plugins/mqtt/: utils.rs
src/windows/: win_error.rs  win_info.rs  win_main.rs  wins.rs
utils/: daemon.sh
