[package]
name = "cng"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
crossbeam-channel = "0.5.14"
fs2 = "0.4.3"
log = "0.4.22"
ratatui = "0.29.0"
rumqttc = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
shlex = "1.3.0"
tokio = { version = "1", features = ["full"] }
