[package]
name = "cng"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0.1.85"
clap = { version = "4.0", features = ["derive"] }
fs2 = "0.4.3"
log = "0.4.24"
ratatui = "0.29.0"
regex = "1.11.1"
rumqttc = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
shlex = "1.3.0"
tokio = { version = "1", features = ["full"] }
