[package]
name = "cng"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
aes-gcm = "0.10.3"
ascii85 = "0.2.1"
async-trait = "0.1.87"
base64 = "0.22.1"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
futures = "0.3.31"
log = "0.4.26"
md5 = "0.7.0"
mongodb = "3.2.2"
notify = "8.0.0"
once_cell = "1.20.3"
rand = "0.9.0"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = "0.12.12"
rumqttc = "0.24.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
shlex = "1.3.0"
surge-ping = "0.8.2"
sysinfo = "0.33.1"
tokio = { version = "1.44.0", features = ["full"] }
wol-rs = "1.1.0"
