[package]
name = "cng"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.10.2"
aes-gcm = "0.10.3"
ascii85 = "0.2.1"
async-trait = "0.1.88"
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.27"
md5 = "0.7.0"
mongodb = "3.2.3"
notify = "8.0.0"
once_cell = "1.21.3"
rand = "0.9.1"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
rumqttc = "0.24.0"
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shlex = "1.3.0"
surge-ping = "0.8.2"
sysinfo = "0.34.2"
tokio = { version = "1.44.2", features = ["full"] }
unicode-width = "0.2.0"
uuid = { version = "1", features = ["v4"] }
wol-rs = "1.1.0"
